--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,28 @@
 .btnWitdh {
     width: 100%;
 }
+
+
+
+.btnWitdh {
+    width: 100%;
+}
+.btnIcon i {
+    margin-right: 10px;
+}
+.btnIcon {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.collection .collection-item.avatar .title {
+    font-weight: 700;
+    font-size: 20px;
+    display: block;
+}
+.collection .collection-item.avatar p.precio {
+    color: #2bbbad;
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 10px;
+}
